--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,1 +1,19 @@
-<h1 class="btn">中村さん神</h1>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tailwindプロジェクト</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
+  <div class="my-1 flex w-full justify-center gap-1 grid grid-3 gap-4">
+    <h1 class="text-3xl font-bold underline m-8">
+      Hello, Tailwind!<br />
+    </h1>
+
+  </div>
+</body>
+</html>
+
+    <%= link_to "Login", new_user_session_path %>
