--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -8,8 +8,13 @@
 </head>
 <body>
   <div class="my-1 flex w-full justify-center gap-1 grid grid-3 gap-4">
-    <h1 class="text-3xl font-bold underline m-8">
-      Hello, Tailwind!<br />
+    <h1 class="text-3xl font-bold m-8">
+      Welcome!Saitama!!<br />
+      春日部つむぎ<br />
+      「お前が埼玉県民になるんだよ！」<br />
+      <br />
+      ずんだもん<br />
+      「えぇ…」
     </h1>
 
   </div>
