add:Top画面編集、利用規約のボタン作成

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -3,13 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tailwindプロジェクト</title>
+  <title>SaitaManear_アプリケーション</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <div class="my-1 flex w-full justify-center gap-1 grid grid-3 gap-4">
+  <div class="w-full text-center">
+    <h1 class="text-6xl font-bold m-8">
+      Welcome!!<br />
+      SaitaManear<br />
+    </h1>
+    <h6 class="text-l m-8">
+      Saitama(埼玉) + Mania(マニア) + near(近く)
+    </h6>
     <h1 class="text-3xl font-bold m-8">
-      Welcome!Saitama!!<br />
       春日部つむぎ<br />
       「お前が埼玉県民になるんだよ！」<br />
       <br />
@@ -17,8 +23,37 @@
       「えぇ…」
     </h1>
 
+    <h1>
+    SaitaManearとは？<br />
+    埼玉県の有名な観光地などに向かった「ついでに」サイトにはあまり書かれていない<br />
+    現在地から近くの知られていない秘境や、なんや変わりのなさそうな場所の魅力を検索して探索ができる。<br />
+    <br />
+    特に変わり映えのないけど見てみたら面白い階段や、身近にある人目に触れないな変な物などまで、有名な場所以外にも巡る場所を増やすためのサービス。<br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    </h1>
+
+  </div>
+
+  <div class="fixed bottom-20 left-0 right-0 flex justify-center">
+    <%= link_to '#', class:"btn px-5" do %>
+    <span>利用規約</span>
+    <% end %>
+
+    <%= link_to '#', class:"btn px-5" do %>
+    <span>プライバシーポリシー</span>
+    <% end %>
+
+    <%= link_to '#', class:"btn px-5" do %>
+    <span>お問い合わせ</span>
+    <% end %>
+    
   </div>
 </body>
 </html>
-
-    <%= link_to "Login", new_user_session_path %>
