--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -5,7 +5,7 @@
       <a class="text-3xl font-bold text-orange-600">Saita<span class="text-yellow-400">Manear</span></a>
     </div>
     <div class="flex-none">
-      <%= link_to new_user_session_path, class:"btn btn-ghost text-black text-sm font-bold" do %>
+      <%= link_to new_user_session_path, class:"btn btn-outline btn-w text-black text-sm font-bold" do %>
         <span>ログイン</span>
       <% end %>
     </div>
