20250429_add:Header_ログイン後のヘッダーファイル作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,12 @@
   </head>
 
   <body>
-    <%= render 'shared/header' %>
+    <% if signed_in? %>
+      <%= render 'shared/before_login_header' %>
+    <% else %>
+      <%= render 'shared/header' %>
+    <% end %>
+
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
