--- a/app/views/shared/_before_login_after.html.erb
+++ b/app/views/shared/_before_login_after.html.erb
@@ -5,12 +5,12 @@
       <a class="text-3xl font-bold text-orange-600">Saita<span class="text-yellow-400">Manear</span></a>
     </div>
     <div class="flex-none">
-      <%= link_to destroy_user_session_path, class:"btn btn-outline btn-w text-black text-sm font-bold" do %>
-        <span>サインアウト</span>
+      <%= link_to new_user_session_path, method: :delete, class: "btn btn-outline btn-w text-black text-sm font-bold" do %>
+        <span>ログイン</span>
       <% end %>
     </div>
   </div>
 
   <!-- サブヘッダー -->
-  <div class="bg-orange-300 text-sm p-1 px-3">Layout ログイン後</div>
+  <div class="bg-orange-300 text-sm p-1 px-3">Layout ログイン前</div>
 </header>
