--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -12,7 +12,7 @@ spots#index
 <script>
   let map
   const display = document.getElementById('display')
-
+  console.log("さくぴさん神")
   // mapの表示関数 
 function initMap(){
 
