--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,7 +1,4 @@
-検索画面
-spots#index
-
-<div id='map'></div>
+<div id="map"></div>
 
 <style>
   #map {
@@ -9,30 +6,25 @@ spots#index
     width: 100vw;
   }
 </style>
+
 <script>
-  let map
-  const display = document.getElementById('display')
-  console.log("さくぴさん神")
-  // mapの表示関数 
-function initMap(){
+  let map; // グローバルに定義
 
-  // 位置情報を取得する
-  navigator.geolocation.getCurrentPosition(function (position) {
-    LatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+  function initMap() {
+    navigator.geolocation.getCurrentPosition(function (position) {
+      const LatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
 
-  // 取得した位置情報を中心に表示
-    map = new google.maps.Map(document.getElementById('map'), {
-      center: LatLng,
-      zoom: 15
+      map = new google.maps.Map(document.getElementById('map'), {
+        center: LatLng,
+        zoom: 15
+      });
+
+      new google.maps.Marker({
+        map: map,
+        position: LatLng
+      });
     });
-
-  // マーカーを立てる
-    var marker = new google.maps.Marker({
-      map : map,         
-      position : LatLng   
-    });
-  });
-}
+  }
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=initMap" async defer></script>
