20250501_add:地点登録ページ

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,33 +1,42 @@
 <footer class="fixed bottom-0 left-0 right-0 bg-green-200 flex justify-around items-center text-xs py-2 border-t border-green-400">
-  <%= link_to root_path, class:"btn btn-ghost flex flex-col items-center font-bold px-10" do %>
+  <%= link_to root_path, class:"btn btn-ghost flex flex-col items-center font-bold px-5" do %>
     <svg class="h-6 w-6 text-red-500" fill="currentColor" viewBox="0 0 24 24">
       <path d="M3 12l9-9 9 9-9 9-9-9z"/>
     </svg>
     <span>ホーム</span>
   <% end %>
 
-  <%= link_to new_user_session_path, class:"btn btn-ghost flex flex-col items-center font-bold" do %>
-    <svg class="h-6 w-6 text-green-700" fill="currentColor" viewBox="0 0 24 24">
-      <path d="M6 2h12v20H6z"/>
-    </svg>
-    <span>地点登録</span>
+  <% if signed_in?%>
+    <%= link_to new_spot_path, class:"btn btn-ghost flex flex-col items-center font-bold px-5" do %>
+      <svg class="h-6 w-6 text-green-700" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M6 2h12v20H6z"/>
+      </svg>
+      <span>地点登録</span>
+    <% end %>
+  <% else %>
+    <%= link_to new_user_session_path, class:"btn btn-ghost flex flex-col items-center font-bold px-5" do %>
+      <svg class="h-6 w-6 text-green-700" fill="currentColor" viewBox="0 0 24 24">
+        <path d="M6 2h12v20H6z"/>
+      </svg>
+      <span>地点登録</span>
+    <% end %>
   <% end %>
 
-  <%= link_to spots_path, class:"btn btn-ghost flex flex-col items-center" do %>
+  <%= link_to spots_path, class:"btn btn-ghost flex flex-col items-center px-5" do %>
     <svg class="h-6 w-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a10 10 0 00-7.07 17.07A10 10 0 1012 2z"/>
     </svg>
     <span>探索</span>
   <% end %>
 
-  <%= link_to '#', class:"btn btn-ghost flex flex-col items-center font-bold" do %>
+  <%= link_to '#', class:"btn btn-ghost flex flex-col items-center font-bold px-5" do %>
     <svg class="h-6 w-6 text-yellow-500" fill="currentColor" viewBox="0 0 24 24">
       <path d="M12 17.27L18.18 21 16.54 13.97 22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/>
     </svg>
     <span>リスト検索</span>
   <% end %>
 
-  <%= link_to new_user_session_path, class:"btn btn-ghost flex flex-col items-center font-bold" do %>
+  <%= link_to new_user_session_path, class:"btn btn-ghost flex flex-col items-center font-bold px-5" do %>
     <svg class="h-6 w-6 text-yellow-800" fill="currentColor" viewBox="0 0 24 24">
       <path d="M12 12c2.7 0 5-2.3 5-5s-2.3-5-5-5-5 2.3-5 5 2.3 5 5 5zm0 2c-3.3 0-10 1.7-10 5v3h20v-3c0-3.3-6.7-5-10-5z"/>
     </svg>
