--- a/app/views/shared/_before_login_footer.html.erb
+++ b/app/views/shared/_before_login_footer.html.erb
@@ -6,12 +6,13 @@
     <span>ホーム</span>
   <% end %>
 
-  <%= link_to new_spot_path, class:"btn btn-ghost flex flex-col items-center font-bold px-5" do %>
+  <%= link_to new_user_session_path, class:"btn btn-ghost flex flex-col items-center font-bold px-5" do %>
     <svg class="h-6 w-6 text-green-700" fill="currentColor" viewBox="0 0 24 24">
       <path d="M6 2h12v20H6z"/>
     </svg>
     <span>地点登録</span>
   <% end %>
+
 
   <%= link_to spots_path, class:"btn btn-ghost flex flex-col items-center px-5" do %>
     <svg class="h-6 w-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
