20250501_fix:Header-Footer_ボタンサイズ、位置変更

--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -41,7 +41,7 @@
 
   </div>
 
-  <div class="fixed bottom-20 left-0 right-0 flex justify-center">
+  <div class="fixed bottom-20 left-0 right-0 flex justify-center flex-wrap">
     <%= link_to '#', class:"btn px-5" do %>
     <span>利用規約</span>
     <% end %>
