--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -5,7 +5,10 @@
       <a class="text-3xl font-bold text-orange-600">Saita<span class="text-yellow-400">Manear</span></a>
     </div>
     <div class="flex-none">
-      <%= button_to new_user_session_path, method: :get, class: "btn btn-outline btn-w text-black text-sm font-bold" do %>
+      <%= link_to new_user_session_path, class:"btn btn-ghost flex flex-col items-center font-bold flex-1" do %>
+        <svg class="h-6 w-6 text-yellow-800" fill="currentColor" viewBox="0 0 24 24">
+          <path d="M12 12c2.7 0 5-2.3 5-5s-2.3-5-5-5-5 2.3-5 5 2.3 5 5 5zm0 2c-3.3 0-10 1.7-10 5v3h20v-3c0-3.3-6.7-5-10-5z"/>
+        </svg>
         <span>ログイン</span>
       <% end %>
     </div>
