202500501_fix:各ページ名の表示を本リリースに変更

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -15,5 +15,5 @@
   </div>
 
   <!-- サブヘッダー -->
-  <div class="bg-orange-300 text-sm p-1 px-3">Layout ログイン後</div>
+  <div class="bg-orange-300 text-sm p-1 px-3"></div>
 </header>
