20250503_fix:tailwind_設定変更

--- a/app/views/your_profiles/show.html.erb
+++ b/app/views/your_profiles/show.html.erb
@@ -3,6 +3,10 @@
     <button>output</button>
 <button class="btn btn-active">Default</button>
 <button class="btn btn-active btn-neutral">Neutral</button>
+<button class="btn btn-active btn-primary">Primary</button>
+<button class="btn btn-active btn-secondary">Secondary</button>
+<button class="btn btn-active btn-accent">Accent</button>
+<button class="btn btn-active btn-ghost">Ghost</button>
 <button class="btn btn-active btn-link">Link</button>
     <%= link_to "編集", edit_your_profile_path, class: "btn btn-secondary w-20" %>
     <div class="flex flex-col">
