--- a/app/views/your_profiles/show.html.erb
+++ b/app/views/your_profiles/show.html.erb
@@ -1,13 +1,8 @@
 <div class="container">
   <div class="row">
     <button>output</button>
-<button class="btn btn-active">Default</button>
-<button class="btn btn-active btn-neutral">Neutral</button>
-<button class="btn btn-active btn-primary">Primary</button>
-<button class="btn btn-active btn-secondary">Secondary</button>
-<button class="btn btn-active btn-accent">Accent</button>
-<button class="btn btn-active btn-ghost">Ghost</button>
-<button class="btn btn-active btn-link">Link</button>
+    <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-active btn-neutral" %>
+
     <%= link_to "編集", edit_your_profile_path, class: "btn btn-secondary w-20" %>
     <div class="flex flex-col">
       <%= @user.avatar %>
