--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -2,7 +2,7 @@
 
 <style>
   #map {
-    height: 70vh;
+    height: 100vh;
     width: 100vw;
   }
 </style>
@@ -11,18 +11,37 @@
   let map; // グローバルに定義
 
   function initMap() {
-    navigator.geolocation.getCurrentPosition(function (position) {
-      const LatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+    // 地図要素を取得
+    const mapElement = document.getElementById('map')
 
-      map = new google.maps.Map(document.getElementById('map'), {
-        center: LatLng,
+    // 現在地を取得
+    // ブラウザに位置情報の取得を依頼する関数です。成功すると、現在地の情報が position オブジェクトとして渡されます。
+    navigator.geolocation.getCurrentPosition(function (position) {
+      // 「LatLng: 地理座標（緯度と経度）」で表される地点の枠を作り「userLatLng」に入れる
+      const userLatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+
+      map = new google.maps.Map(mapElement, {
+        center: userLatLng,
         zoom: 15
       });
 
+      // 現在地のマーカーを入れる
       new google.maps.Marker({
         map: map,
-        position: LatLng
+        position: userLatLng,
+        icon: {
+          url: "http://maps.google.com/mapfiles/ms/icons/blue-dot.png"
+        }
       });
+
+      // 投稿されているマーカーを追加
+      <% @spots.each do |spot| %>
+        new google.maps.Marker({
+          position: {lat: <%= spot.latitude %>, lng: <%= spot.longitude %>}, 
+          map: map,
+          name: '<%= j spot.name %>'
+        });
+      <% end %>
     });
   }
 </script>
