20250508_add:GoogleMap上のスポットをクリック時に吹き出しが出るように

--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,11 +1,11 @@
-<header class="fixed top-0 left-0 right-0">
+<header class="fixed top-0 left-0 right-0 z-50">
   <!-- ヘッダー -->
-  <div class="navbar bg-green-400">
-    <div class="flex-1">
-      <a class="text-3xl font-bold text-orange-600">Saita<span class="text-yellow-400">Manear</span></a>
+  <div class="flex items-center justify-between bg-green-400 px-4 py-3">
+    <div class="text-3xl font-bold text-orange-600">
+      <a href="#">Saita<span class="text-yellow-400">Manear</span></a>
     </div>
-    <div class="flex-none">
-      <%= link_to new_user_session_path, class:"btn btn-ghost flex flex-col items-center font-bold flex-1" do %>
+    <div>
+      <%= link_to new_user_session_path, class: "flex flex-col items-center font-bold" do %>
         <svg class="h-6 w-6 text-yellow-800" fill="currentColor" viewBox="0 0 24 24">
           <path d="M12 12c2.7 0 5-2.3 5-5s-2.3-5-5-5-5 2.3-5 5 2.3 5 5 5zm0 2c-3.3 0-10 1.7-10 5v3h20v-3c0-3.3-6.7-5-10-5z"/>
         </svg>
@@ -15,5 +15,5 @@
   </div>
 
   <!-- サブヘッダー -->
-  <div class="bg-orange-300 text-sm p-1 px-3"></div>
+  <div class="bg-orange-300 text-sm py-1 px-3"></div>
 </header>
