20250512_delete:tailwindcss-ruby/rails + add:cssbundling-rails + CSSはTailwindをほぼ使用せずMVPまでまず持っていく形に変更。一時対応としてstyleで作成。

--- a/app/views/shared/_before_login_footer.html.erb
+++ b/app/views/shared/_before_login_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="fixed bottom-0 left-0 right-0 bg-green-200 flex w-full items-center text-xs py-2 border-t border-green-400">
+<footer class="fixed bottom-0 left-0 right-0 h-16 bg-green-200 flex w-full items-center text-xs py-2 border-t border-green-400">
   <%= link_to root_path, class:"btn btn-ghost flex flex-col items-center font-bold flex-1 min-w-0" do %>
     <svg class="h-6 w-6 text-red-500" fill="currentColor" viewBox="0 0 24 24">
       <path d="M3 12l9-9 9 9-9 9-9-9z"/>
@@ -14,7 +14,7 @@
   <% end %>
 
 
-  <%= link_to spots_path, class:"btn btn-ghost flex flex-col items-center flex-1 min-w-0" do %>
+  <%= link_to spots_path, class:"btn btn-ghost flex flex-col items-center font-bold flex-1 min-w-0" do %>
     <svg class="h-6 w-6 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2a10 10 0 00-7.07 17.07A10 10 0 1012 2z"/>
     </svg>
