--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,6 +1,6 @@
-<header class="fixed top-0 left-0 right-0 z-50">
+<header class="fixed top-0 left-0 right-0">
   <!-- ヘッダー -->
-  <div class="flex items-center justify-between bg-green-400 px-4 py-3">
+  <div class="flex items-center justify-between bg-green-400">
     <div class="text-3xl font-bold text-orange-600">
       <a href="#">Saita<span class="text-yellow-400">Manear</span></a>
     </div>
@@ -15,5 +15,5 @@
   </div>
 
   <!-- サブヘッダー -->
-  <div class="bg-orange-300 text-sm py-1 px-3"></div>
+  <div class="bg-orange-300 text-sm p-1"></div>
 </header>
