--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="fixed bottom-0 left-0 right-0 bg-green-200 h-20 flex w-full items-center text-xs py-2 border-t border-green-400">
+<footer class="fixed bottom-0 bg-green-200 flex w-full items-center text-xs py-2 border-t border-green-400">
   <%= link_to root_path, class:"flex flex-col items-center font-bold flex-1 min-w-0" do %>
     <svg class="h-6 w-6 text-red-500" fill="currentColor" viewBox="0 0 24 24">
       <path d="M3 12l9-9 9 9-9 9-9-9z"/>
