--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <header class="fixed top-0 left-0 right-0">
   <!-- ヘッダー -->
-  <div class="flex items-center justify-between bg-green-400">
+  <div class="flex items-center justify-between bg-green-400 py-4">
     <div class="flex-1">
       <a class="text-3xl font-bold text-orange-600">Saita<span class="text-yellow-400">Manear</span></a>
     </div>
