--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SaitaManear_アプリケーション</title>
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
   <div class="w-full text-center">
@@ -15,7 +14,7 @@
     <h6 class="text-l m-8">
       Saitama(埼玉) + Mania(マニア) + near(近く)
     </h6>
-    <h1 class="text-3xl font-bold m-8">
+    <h1 class="text-3xl font-bold m-8 text-orange-500">
       春日部つむぎ<br />
       「お前が埼玉県民になるんだよ！」<br />
       <br />
