--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,6 @@
     <link rel="icon" href="/icon.png" type="image/png">
     <link rel="icon" href="/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/icon.png">
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", type: "module" %>
   </head>
@@ -21,14 +20,14 @@
   <body>
     <% if signed_in? %>
       <%= render 'shared/header' %>
-      <main class="mx-auto mt-28 pb-64">
+      <main style="padding-top: 60px";>
         <%= yield %>
       </main>
       <%= render 'shared/footer' %>
 
     <% else %>
       <%= render 'shared/before_login_header' %>
-      <main class="mx-auto mt-28 pb-64">
+      <main style="padding-top: 60px";>
         <%= yield %>
       </main>
       <%= render 'shared/before_login_footer' %>
