--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -1,12 +1,5 @@
 <div id="map"></div>
 
-<style>
-  #map {
-    height: 100vh;
-    width: 100vw;
-  }
-</style>
-
 <script>
   let map; // グローバルに定義
 
@@ -60,3 +53,12 @@
 </script>
 
 <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=initMap" async defer></script>
+
+<style>
+  #map {
+    position: absolute;
+    top: 64px;
+    bottom: 80px;
+    width: 100%;
+  }
+</style>
