--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -52,7 +52,9 @@
 </div>
 
 <!-- Google Maps Script -->
-<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=NewMacker" async defer></script>
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["GOOGLE_MAPS_API_KEY"] %>&callback=NewMacker">
+</script>
 
 <script>
   let map, marker;
