20250513_fix:マーカー詳細ページ修正

--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -40,8 +40,8 @@
         const infoWindow = new google.maps.InfoWindow({
           content: 
                   `
-                    <%= j spot.name %><br>
-                    <%= j spot.summary %><br>
+                    <%= spot.name %><br>
+                    <%= spot.summary %><br>
                     <br>
                     <a href="<%= spot_path(spot) %>">詳細はこちら</a>
                   `
