--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -66,7 +66,7 @@
     new google.maps.Marker({
       position: latLng,
       map: map,
-      title: "<%= @spot.name %>"
+      title: "<%= j @spot.name %>"
     });
   }
 </script>
